examples/memory/negative/04_memory_list.skd
// Negative memory example 04: Memory List is forbidden.

new Memory List memory_pool = []
